connects front page client icons to case studies

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -6,11 +6,13 @@ $desktop-view-size: 768px;
 $header_height: 110px;
 $footer_height: 110px;
 
-$blue: #1588c3;
+$blue: #4085D4;
+$tan: #ECE6D9;
+$white: #FFFFFF;
+
 $bright-blue: #2ba6cb;
 $dark-blue: #004264;
 $spring-blue: #266287;
-$white: #FFF;
 $black: #000;
 $steel-gray: #455560;
 $text-grey: #929292;
