--- a/app/assets/stylesheets/contact_us.css.scss
+++ b/app/assets/stylesheets/contact_us.css.scss
@@ -1,5 +1,11 @@
 @import "common";
 
+
+
+.white-background {
+  background-color: white;
+}
+
 #contact-header {
 	background-color: $grey-white;
 	z-index: 10;
