--- a/app/views/contents/_form.html.haml
+++ b/app/views/contents/_form.html.haml
@@ -10,8 +10,8 @@
     = f.label :action
     = f.text_field :action
   .field
-    = f.label :index
-    = f.number_field :index
+    = f.label :welcome
+    = f.number_field :welcome
   .field
     = f.label :value
     = f.text_area :value
