--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -12,7 +12,7 @@
   - @contents.each do |content|
     %tr
       %td= content.action
-      %td= content.index
+      %td= content.welcome
       %td= content.value
       %td= link_to 'Show', content
       %td= link_to 'Edit', edit_content_path(content)
