--- a/app/views/pages/approach.html.haml
+++ b/app/views/pages/approach.html.haml
@@ -1,4 +1,4 @@
-%div#how-we-work
+%div
   -#
     .row
       #circle-white
@@ -41,4 +41,6 @@
         = image_tag("iterate.png")
     .column.eight.mobile-three
       %h5 Iterate
-      %h4 You have users, revenue and an appetite for more. Lessons learned will be turned into improved functionality and a better, stronger application, capturing more users along the way. Perhaps you are ready to hire your own tech team, and we will proudly hand you off like parents at the first day of school…but you will always have a room in our home.
+      %h4 You have users, revenue and an appetite for more. Lessons learned will be turned into improved functionality and a better, stronger application, capturing more users along the way. Perhaps you are ready to hire your own tech team, and we will proudly hand you off like parents at the first day of school…but you will always have a room in our pages.
+
+
