--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,31 +1,52 @@
 @import "common";
 
 #footer {
-  display: block;
-  margin: 0 auto;
-  height: $footer_height;
-  width:50%;
+  width:65%;
+  margin:0 auto;
+  display:block;
+  list-style-type: none;
+  padding-top:2%;
+  padding-bottom:5%;
+  #footer-nav {
+    width:100%;
+    ul{
+      width:100%;
+      li {
+        width:25%;
+        display:block;
+        float:left;
+        a {
+          display:block;
+          width:100%;
+          img {
+            display:block;
+            margin:0 auto;
 
-  #footer-blog {
-    margin-left: 6%; //so all links (including logo image) are equidistant from one another
-  }
-  #footer-logo {
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-    img{vertical-align: middle;}
-  }
-  .link {
-    float: left;
-    display: block;
-    width:22%;
-    text-align:center;
-    a {
-      color:black;
-      line-height: $footer_height;
+          }
+        }
+      }
     }
   }
 }
 
+@media (max-width: $mobile-view-size) {
+  #footer #footer-nav ul{
+    #footer-icon li {
+      width:100% !important;
+      img {
+        padding-top:10px !important;
+        width:30% !important;
+      }
+    }
+    li{
+      width:33.3%;
+      img {
+        width:90% !important;
+        padding:0px !important;
+        margin-bottom:20px !important;
+      }
+    }
+  }
+}
 
 
