--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,5 +1,6 @@
 @import "common";
 
+/*
 #about-header {
   background: #38a8cc;
   padding-top: 10.7%;
@@ -122,8 +123,8 @@
 }
 
 #how-we-work {
-  border-bottom: 1px solid #e9e9e9;
 
+border-bottom: 1px solid #e9e9e9;
   h4 {
     margin-top: 20px;
   }
@@ -139,7 +140,6 @@
   }
 }
 
-#work-header {
   padding-top: 45px;
   padding-bottom: 36px; 
   text-align: center;
@@ -216,11 +216,11 @@
   border-radius: 5px;
 
   //-webkit-transition: all 0.3s ease-out; /* Safari 3.2+, Chrome */
-  -moz-transition: all 0.3s ease-out; /* Firefox 4-15 */
-  -o-transition: all 0.3s ease-out; /* Opera 10.5–12.00 */
-  transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
-}
-
+  //-moz-transition: all 0.3s ease-out; /* Firefox 4-15 */
+  //-o-transition: all 0.3s ease-out; /* Opera 10.5–12.00 */
+  //transition: all 0.3s ease-out; /* Firefox 16+, Opera 12.50+ */
+//}
+/*
 .modal .about-us-avatar {
   float: left;
 }
@@ -294,3 +294,4 @@
     padding-left: 35px;
   }
 }
+*/
