--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 
 body {
   font-family: "Merriweather Sans", "Merriweather", sans-serif;
-
+  height:100%;
 }
 
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,th,td {
@@ -33,7 +33,7 @@ body {
   position: relative;
   overflow-x: hidden;
   height: 100%;
-
+  height:100%;
 }
 
 .main-container {
