--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -1,6 +1,6 @@
 @import "common";
 
-#work-together-block, #contact-us-banner {
+#work-together-block, #contact-us-banner, #heart-banner {
   background: #ECE6D9;
   font-size:25px;
   text-align:center;
