--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -9,4 +9,6 @@
       = tab_to "Contact", contact_path, active_tab("#{contact_path}$").merge({'data-no-turbolink' => true, title: "Contact"})
     #burger
       #patty
-
+/following brs are a hack for unexpected behavior
+%br
+%br
