--- a/app/views/pages/contact_us.html.haml
+++ b/app/views/pages/contact_us.html.haml
@@ -1,10 +1,5 @@
-#contact-header
-  .row
-    %h1 Interested in working with us?
-#contact-body
-  .row
-    %h3 Let's start the conversation. 
-    %h4 There are no secrets to success. It is the result of preparation, hard work, and learning from experience. 
-    #contactTab
-      =render :partial => "messages/contact"
-
+#contact-us
+  Contact Us
+/%h4 There are no secrets to success. It is the result of preparation, hard work, and learning from experience.
+=render :partial => "messages/contact"
+= render "shared/heart"
