--- a/app/assets/stylesheets/contact_us.scss
+++ b/app/assets/stylesheets/contact_us.scss
@@ -1,82 +1,81 @@
 @import "common";
 
 
+#contact-us  {
+  display:block;
+  width:80%;
+  margin:0 auto;
+  text-indent: 0px;
+  display:block ;
+  text-align: left;
+  font: 20px 'Merriweather Sans', sans-serif;
 
-.white-background {
-  background-color: white;
 }
 
-#contact-header {
-	background-color: $grey-white;
-	z-index: 10;
+form#contact-form{
+  width:80%;
+  margin: 0 auto 10% auto;
 
-	h1 {
-		margin-top: 80px;
-		padding-bottom: 62px;
-	}
 }
 
-#contact-body {
-	background-color: white;
-	padding-top: 50px;
-	border-bottom: 1px solid #e9e9e9;
-	z-index: 10;
 
-	.row {
-		max-width: 833px;
-		margin-left: auto;
-		margin-right: auto;
-
-		.twelve.columns {
-			height: 480px;
-		}
-
-		.six.columns {
-			max-width: 400px;
-		}
-	}
-
-	h4 {
-		max-width: 500px;
-		padding-bottom: 30px;
-	}
-
-	input:not(.submit-link), textarea {
-		background-color: #f6f6f6;
-		padding-left: 20px;
-		font-size: 18px;
-		font-family: "Merriweather Sans", sans-serif;
-		color: #535353;
-	}
-
-	input:not(.submit-link) {
-		height: 50px;
-	}
-
-	textarea {
-		margin-top: 30px;
-		padding-top: 20px;
-		height: 300px;
-	}
-
-	.btn {
-		width: 100%;
-		margin-top: 50px;
-		padding-top: 5px;
-
-	}
+input {
+  display:block;
+  height:100%;
+  margin: 20px 0px 0px 0px;
+  height:36px;
+  text-align: left;
+  font-size:18px;
+  font-weight:bold;
+  text-indent:10px;
 }
 
-#map-container {   //see header.scss for mobile-menu class addition definition
-	position: fixed;
-	z-index: -1;
-	bottom: -43px;
-	left: 0;
-	right: 0;
+input#message_name {
+  float:left;
+  width:48%; @media (max-width: $mobile-view-size) { width:99%;}
+  padding:6px 0px;
+
 }
 
-#map-canvas {
-	height: 550px;
-	z-index: 0;
-	background-color: white;
+input#message_email {
+  float:right;
+  width:48%; @media (max-width: $mobile-view-size) { width:99%;}
+  padding:6px 0px;
+
 }
+
+textarea#message_text {
+  width:99%;
+  height:272px;
+  padding:6px 0px;
+  margin: 20px 0px 0px 0px;
+  text-align: left;
+  font-size:14px;
+  font-weight:bold;
+  text-indent:10px;
+}
+
+input#contact-us-form.btn {
+  width:100%;
+  height:100%;
+  color: black;
+  font: 20px 'Merriweather Sans', sans-serif;
+  padding: 20px 20px;
+  text-decoration: none;
+  font-weight:normal;
+  text-align: left;
+  border-radius: 10px;
+  -webkit-transition: all 0.2s ease-out; /* Safari 3.2+, Chrome */
+  -moz-transition: all 0.2s ease-out; /* Firefox 4-15 */
+  -o-transition: all 0.2s ease-out; /* Opera 10.5–12.00 */
+  transition: all 0.2s ease-out; /* Firefox 16+, Opera 12.50+ */
+  background:white;
+  color:black;
+  border-color: blue;
+  &:hover{
+    color: blue;
+
+
+  }
+}
+
