add some minor css tweaks

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -37,12 +37,12 @@ body.mobile-menu {
 }
 
 @media (max-width: $mobile-view-size) {
-  #header #nav ul {
+  #nav ul {
     display: none;
   }
 }
 @media (min-width: $desktop-view-size) {
-  #header #nav #burger {
+  #nav #burger {
     display: none;
   }
 }
