--- a/app/views/layouts/_admin_menu.html.haml
+++ b/app/views/layouts/_admin_menu.html.haml
@@ -1,12 +1,8 @@
-.row#admin-menu
-  .five.columns
-    %ul.link-list
-      //%li=link_to "Dashboard", admin_root_path
-      %li=link_to "New Blog Post", new_post_path
-      //%li=link_to "New Job Posting", new_job_path
-      %li=link_to "New Project", new_project_path
-  .four.columns
-    %span.status
-      Signed in as
-      = link_to(current_admin.name, "edit_my_profile")
-      = link_to('Sign Out', destroy_admin_session_path, :method => :delete)
+#admin-menu
+  %ul.link-list
+    //%li=link_to "Dashboard", admin_root_path
+    //%li=link_to "New Job Posting", new_job_path
+    %li=link_to(current_admin.name, "/edit_my_profile")
+    %li=link_to "New Blog Post", new_post_path
+    %li=link_to "Create New Project", new_project_path
+    %li=link_to('Sign Out', destroy_admin_session_path, :method => :delete)
