--- a/app/views/projects/edit.html.haml
+++ b/app/views/projects/edit.html.haml
@@ -1,8 +1,3 @@
-%h1 Editing #{@project.title}
-
+#edit-project
+  %h2 Edit Project Detail
 = render 'form'
-
-.row
-	= link_to 'Show', @project
-	\|
-	= link_to 'Back', projects_path
