--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,11 +42,11 @@ h1, h2, h3, h4, h5 {
   font-weight: normal;
 }
 
-h1 {font-size: 42px;}
-h2 {font-size: 24px;}
-h3 {font-size: 30px;}
-h4 {font-size: 16px;}
-h5 {font-size: 12px;}
+h1 {font-size: 42px;line-height: 48px;}
+h2 {font-size: 24px;line-height: 32px;}
+h3 {font-size: 30px;line-height: 24px;}
+h4 {font-size: 16px;line-height: 32px;}
+h5 {font-size: 12px;line-height: 24px;}
 
 ul {
   list-style-type: none;
