--- a/app/assets/stylesheets/our_approach.scss
+++ b/app/assets/stylesheets/our_approach.scss
@@ -1,39 +1,38 @@
 @import "common";
 
 #our-approach-header{
-  width:80%   ;
-  margin: 0 auto;
-  border-bottom: 1px solid #e9e9e9;
-  padding-bottom:5%;
-  margin-top: -5%;
+ padding-bottom:6%;
+  padding-top:4%;
+  text-align: center;
+  width:80%;
+  margin:0 auto;
+
+  h3 {
+   color:#4085D4;
+   margin-bottom:3%;
+   display:block;
+  }
+
 }
 
 #step {
     display:block;
-    height:20%;
-    padding-top:2%;
-    padding-bottom:10%;
-
     width:90%;
     margin: 0 auto;
     border-bottom: 1px solid #e9e9e9;
-
+    height:30%;
+    margin-bottom:20px;
     .text {
       display:block;
       width:80%;
       margin-top:1%;
-      h1{
-        font-size: 22px !important;
-      }
-      h1,h4 {
-        text-align: left;
-        padding-top:0px;
-        margin-top: 0px;
-      }
+      height:25%;
     }
 
     .icon {
       width:15%;
+      display:block;
+
       img {
         width:100%;
         padding:2%;
