--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,18 +1,49 @@
+@import "common";
+
+#our-work {
+
+  #our-work-header {
+    padding-bottom:8%;
+    padding-top:4%;
+
+    text-align: center;
+    h3 {
+      color:#4085D4;
+      margin-bottom:3%;
+    }
+  }
+
+  #our-work-index {
+    display:block;
+    margin: 0 auto;
+    overflow: hidden;
+
+   .projects-client-box {
+     width: 33.3%;
+     float:left;
+     margin: 0 auto;
+
+     a img {
+       display:block;
+       margin: 0 auto;
+       width:80% ;
+      }
+    }
+  }
+}
 
 input#project_title, input#project_permalink, input#project_icon, input#project_background_color, input#project_tagline, input#project_url  {
   width:100%;
   padding:6px 0px;
 }
-
-#new-project h2 {
+#new-project h2,#edit-project h2  {
   width:80%;
   margin: 0 auto;
 }
-form#new_project{
+form#new_project, form.edit_project{
   width:80%;
   margin: 0 auto 10% auto;
 }
-
 textarea#project_product_description, textarea#project_project_description, textarea#project_result_description {
   width:99%;
   height:272px;
@@ -23,7 +54,6 @@ textarea#project_product_description, textarea#project_project_description, text
   font-weight:bold;
   text-indent:10px;
 }
-
 input#contact-us-form.btn {
   width:100%;
   height:100%;
@@ -43,5 +73,43 @@ input#contact-us-form.btn {
   border-color: blue;
   &:hover{
     color: blue;
+  }
+}
+#tagline {
+  width: 100%;
+  padding-top: 50px;
+  margin-bottom: -121px;
+  text-align: center;
+
+  h3 {
+    color: #FFFFFF;
+  }
+}
+
+#case-study-middle-row {
+  height: 50px;
+  padding-top: 160px;
+  background-color: $grey-white;
+  z-index: 1;
+  position: relative;
+}
+
+#case-study-steps {
+  padding-top: 70px;
+  padding-bottom: 50px;
+  border-bottom: 1px solid #e9e9e9;
+
+  .row {
+    max-width: 833px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  h3 {
+    margin-top: 0px;
+  }
+  h4 {
+    margin-top: 20px;
+    margin-bottom: 50px;
   }
 }
