--- a/app/views/layouts/_admin_menu.html.haml
+++ b/app/views/layouts/_admin_menu.html.haml
@@ -5,4 +5,5 @@
     %li=link_to(current_admin.name, "/edit_my_profile")
     %li=link_to "New Blog Post", new_post_path
     %li=link_to "Create New Project", new_project_path
+    %li=link_to "Images", images_path
     %li=link_to('Sign Out', destroy_admin_session_path, :method => :delete)
