--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -4,13 +4,13 @@
       %h1 A Modern Digital Agency
     #scroll-icon
       =image_tag 'scroll.png'
-      %h4 scroll down to read more
+      %h5 scroll down to read more
   #blue-background-wrapper
     #welcome-page-about-us
       %h1 We build applications for people
       %h2 Watching your idea develop into a valuable application should be fun, not daunting. Our approach makes you an integral part of the process while improving your tech along the way.
     #welcome-page-our-clients
-      -@projects.each do |project|
+      -@featured_projects.each do |project|
         .welcome-page-client-box
           =link_to(image_tag(project.picture), project_path(project.permalink))
   #digital-experience
