scopes image index into admin images and team images

--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -1,7 +1,7 @@
 #welcome-page
   #welcome-page-intro
     #digital-agency
-      %h1 A Modern Digital Agency
+      %h1 A Modern Digital Consultancy
     #scroll-icon
       =image_tag 'scroll.png'
       %h5 scroll down to read more
