--- a/app/views/images/index.html.haml
+++ b/app/views/images/index.html.haml
@@ -2,8 +2,12 @@
   %h1 Listing images
 
 = link_to 'Create New Image', new_image_path
-
-- @images.each do |image|
+%br
+%br
+my images
+%br
+%br
+- @images[:my].each do |image|
   #itemized_image
     #image
       = link_to image_tag(image.paperclip.url), image
@@ -11,5 +15,15 @@
       %li=  image.paperclip.url
       %br
       %li= link_to 'Edit', edit_image_path(image)
-      %li= link_to 'Destroy', image, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %li= link_to 'Remove', image, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
+%br
+%br
+%hr
+team images
+- @images[:team].each do |image|
+  #itemized_image
+    #image
+      = link_to image_tag(image.paperclip.url), image
+    %ul
+      %li=  image.paperclip.url
