removes instructions for how to use the web

--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -3,8 +3,7 @@
     #digital-agency
       %h1 A Modern Digital Consultancy
     #scroll-icon
-      =image_tag 'scroll.png'
-      %h5 scroll down to read more
+      %h5 this space intentionally left blank
   #blue-background-wrapper
     #welcome-page-about-us
       %h1 We build applications for people
