--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,7 +1,5 @@
-@import "common";
-
+@import "macros";
 //// see header.coffee ////
-
 body.mobile-menu {
   margin-left: -240px !important;
   overflow-x:hidden;
