--- a/app/views/pages/approach.html.haml
+++ b/app/views/pages/approach.html.haml
@@ -1,6 +1,6 @@
 #our-approach-header
   %h3 Our Approach
-  %h4 Our process is highly iterative and focused on the needs of your business and its customers. Technology exists for the people who use it, and we never forget that.
+  %h4 Our process is highly iterative and focused on the needs of your business.
 #step
   .text{ :style => "float: right;"}
     %h4 Pleased to Meet You
