--- a/app/assets/stylesheets/contact_us.scss
+++ b/app/assets/stylesheets/contact_us.scss
@@ -1,15 +1,4 @@
-@import "common";
-
-
-.btn {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
-  text-align: center;
-  border-width: 1px;
-  border-style: solid;
-}
-
+@import "macros";
 #contact-us.btn {
   width:150px;
   color: black;
@@ -29,6 +18,30 @@
     border-color: white;
   }
 }
+
+
+input#contact-us-form.btn {
+  width:100%;
+  height:100%;
+  color: black;
+  font: 20px 'Merriweather Sans', sans-serif;
+  padding: 20px 20px;
+  text-decoration: none;
+  font-weight:normal;
+  text-align: left;
+  border-radius: 10px;
+  -webkit-transition: all 0.2s ease-out; /* Safari 3.2+, Chrome */
+  -moz-transition: all 0.2s ease-out; /* Firefox 4-15 */
+  -o-transition: all 0.2s ease-out; /* Opera 10.5–12.00 */
+  transition: all 0.2s ease-out; /* Firefox 16+, Opera 12.50+ */
+  background:white;
+  color:black;
+  border-color: blue;
+  &:hover{
+    color: blue;
+  }
+}
+
 
 #contact-us  {
   display:block;
