--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,5 +1,4 @@
-@import "common";
-
+@import "macros";
 #our-work {
 
   #our-work-header {
@@ -54,62 +53,37 @@ textarea#project_product_description, textarea#project_project_description, text
   font-weight:bold;
   text-indent:10px;
 }
-input#contact-us-form.btn {
-  width:100%;
-  height:100%;
-  color: black;
-  font: 20px 'Merriweather Sans', sans-serif;
-  padding: 20px 20px;
-  text-decoration: none;
-  font-weight:normal;
-  text-align: left;
-  border-radius: 10px;
-  -webkit-transition: all 0.2s ease-out; /* Safari 3.2+, Chrome */
-  -moz-transition: all 0.2s ease-out; /* Firefox 4-15 */
-  -o-transition: all 0.2s ease-out; /* Opera 10.5–12.00 */
-  transition: all 0.2s ease-out; /* Firefox 16+, Opera 12.50+ */
-  background:white;
-  color:black;
-  border-color: blue;
-  &:hover{
-    color: blue;
-  }
-}
-#tagline {
+
+#case-study-banner {
   width: 100%;
-  padding-top: 50px;
-  margin-bottom: -121px;
   text-align: center;
-
-  h3 {
-    color: #FFFFFF;
+  img {
+    vertical-align: middle;
+    width:30%;
+    padding:4%;
   }
 }
 
-#case-study-middle-row {
-  height: 50px;
-  padding-top: 160px;
-  background-color: $grey-white;
-  z-index: 1;
-  position: relative;
-}
-
-#case-study-steps {
+#case-study-details {
+  padding:40px;
   padding-top: 70px;
   padding-bottom: 50px;
   border-bottom: 1px solid #e9e9e9;
 
-  .row {
-    max-width: 833px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  h3 {
-    margin-top: 0px;
-  }
-  h4 {
-    margin-top: 20px;
-    margin-bottom: 50px;
+  #view-the-site.btn {
+    color: black;
+    font: 20px;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-weight:normal;
+    text-align: left;
+    border-radius: 10px;
+    -webkit-transition: all 0.2s ease-out; /* Safari 3.2+, Chrome */
+    -moz-transition: all 0.2s ease-out; /* Firefox 4-15 */
+    -o-transition: all 0.2s ease-out; /* Opera 10.5–12.00 */
+    transition: all 0.2s ease-out; /* Firefox 16+, Opera 12.50+ */
+    background:white;
+    color:black;
+    border-color: black;
   }
 }
