--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,14 +1,13 @@
 #our-work
   #our-work-header
     %h3 Our Work
-    %h4 We have a solid track record of delivering great&nbspresults&nbsp-&nbspon&nbsptime&nbspand&nbspon&nbspbudget. <br>Here are just a few of our recent wins.
-
+    %h4 We have a solid track record of delivering great&nbspresults&nbsp-&nbspon&nbsptime&nbspand&nbspon&nbspbudget.
 
   #our-work-index
     -@featured_projects.each do |project|
       .projects-client-box
         #project-background-style{:style => "background-color: #{project.background_color}"}
-          =link_to(image_tag(project.picture), project_path(project.permalink))
+          =link_to(image_tag(project.icon), project_path(project.permalink))
 
 = render "shared/contact_us_banner"
 
