changes to dynamic digital development

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -13,6 +13,11 @@
       h1 {
         color: black;
       }
+      h4 {
+        padding-top:10px;
+        text-align: center;
+        font-weight: normal;
+      }
     }
     #scroll-icon {
       img{
@@ -34,7 +39,6 @@
       text-align: center;
       width:75%;
       margin:0 auto;
-
       h1, h4 {
         color: #FFFFFF;
         margin-top: 20px;
