--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -1,7 +1,8 @@
 #welcome-page
   #welcome-page-intro
     #digital-agency
-      %h1 A Modern Digital Consultancy
+      %h1 Dynamic Digital Development
+      %h4 inspired innovation. exquisite code. intuitive design
     #scroll-icon
       =image_tag 'scroll.png'
   #blue-background-wrapper
